--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,6 @@ services:
     buildCommand: |
       apt-get update
       apt-get install -y ffmpeg
+      pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: "gunicorn app:app"
