--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
     name: my-project
-    runtime: python
+    env: python
     buildCommand: |
-      apt-get update
-      apt-get install -y ffmpeg
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: "gunicorn app:app"
+      apt-get update && apt-get install -y ffmpeg
+      python -m pip install --upgrade pip
+      python -m pip install -r requirements.txt
+    startCommand: gunicorn app:app
+
+
