--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,6 @@ services:
   - type: web
     name: my-project
     env: python
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      python -m pip install --upgrade pip
-      python -m pip install -r requirements.txt
-    startCommand: gunicorn app:app
-
-
-
-
+    plan: free
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
