--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,5 @@ services:
   - type: web
     name: my-project
     env: python
-    plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
-
-
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app
