--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
-    name: my-project
+    name: flask-video-app
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    buildCommand: |
+      apt-get update
+      apt-get install -y ffmpeg
+      pip install -r requirements.txt
+    startCommand: python app.py
